--- a/src/test/resources/automation-credentials.properties
+++ b/src/test/resources/automation-credentials.properties
@@ -1,12 +1,6 @@
-mongo.host=dharma.mongohq.com
-mongo.port=10037
-mongo.database=testdb
-mongo.username=mule
-mongo.password=mule
-
-mongo.host=127.0.0.1
-mongo.port=27017
-mongo.database=test
-mongo.database.drop.restore=dbForDropRestore
-mongo.username=mule
-mongo.password=mule
+mongo.host=
+mongo.port=
+mongo.database=
+mongo.database.drop.restore=
+mongo.username=
+mongo.password=
