--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.5.0-SNAPSHOT</version>
+        <version>3.5.0-bighorn</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,6 @@
     <artifactId>mule-module-mongo</artifactId>
     <packaging>mule-module</packaging>
     <name>Mule Mongo Connector</name>
-    <version>3.4.1-SNAPSHOT</version>
     <description>Mule Cloud connector to mongo</description>
     <url>http://www.muleforge.org/projects/mule-module-mongo</url>
 
@@ -58,11 +57,6 @@
             <version>${mule.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-			<groupId>org.mule.modules</groupId>
-    		<artifactId>mule-connector-test</artifactId>
-    		<version>${project.parent.version}</version>
-		</dependency>
     </dependencies>
 
     <repositories>
